--- a/website ulang tahun/index.html
+++ b/website ulang tahun/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous" />
     <link rel="stylesheet" href="/website ulang tahun/style.css" />
+    <link rel="stylesheet" href="/media.css" />
   </head>
   <body>
     <div class="gift-container">
