--- a/index.html
+++ b/index.html
@@ -50,24 +50,15 @@
       <div class="hero-main">
         <div class="photo"></div>
         <div class="hero-text mt-1">
-          <h1>HAPPY <span class="type">BIRTHDAY</span></h1>
+          <h1>ONLY <span class="type">FOR</span></h1>
           <!-- <h4>FULLSTACK DEVELOPER | CYBERSECURITY ENGINEER</h4> -->
           <h4>Reivania Khanza Ramadhani<span class="typing-2"></span></h4>
         </div>
       </div>
+      FOR
     </section>
     <!-- ! about me -->
-    <section class="about p-5" id="about">
-      <div class="main-content">
-        <h3>Hi, Vania!</h3>
-        <h1 class="">Happy <span>Birthday</span></h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, hic
-          nesciunt? Incidunt perferendis molestias dolores ad iure ea quibusdam
-          delectus est dolorem, consequuntur adipisci possimus.
-        </p>
-      </div>
-    </section>
+
     <!-- ! service -->
     <section class="gallery" id="gallery">
       <div class="container-gallery">
